--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,3 +58,48 @@ body {
   justify-content: "space-between";
   margin-bottom: "24px";
 }
+
+.lisays {
+  animation: fadeIn 0.5s /* fadeOut 0.5 */;
+  max-width: 600px;
+  background-color: rgb(230, 223, 223);
+  position: relative;
+  margin: 23vh auto;
+  border-radius: 4px;
+  box-shadow: 0 0 10px 10px;
+  padding: 8px;
+  padding-bottom: 12px;
+  z-index: 100;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+/* @keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+} */
+
+.sulje {
+  position: absolute;
+  right: 12xp;
+  cursor: pointer;
+}
+
+.sulje:hover {
+  cursor: pointer;
+}
+
+.tyyli {
+  color: brown;
+}
